<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:orderInCategory="1"
        android:title="@string/menu_home"
        android:icon="@drawable/ic_house"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_search"
        android:orderInCategory="2"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_dop"
        android:orderInCategory="3"
        android:title="@string/menu_dop"
        android:icon="@drawable/ic_menu_dop"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_add_bookmark"
        android:orderInCategory="4"
        android:title="@string/menu_add_bookmark"
        android:icon="@drawable/ic__add_book"
        app:showAsAction="always"/>
    <item
         android:id="@+id/menu_bookmark"
         android:orderInCategory="5"
         android:title="@string/menu_bookmark"
         app:showAsAction="never"/>

    <item
        android:id="@+id/menu_history"
        android:orderInCategory="6"
        android:title="@string/menu_history"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_actionbar"
        android:orderInCategory="7"
        android:title="@string/menu_actionbar"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_share"
        android:orderInCategory="8"
        android:title="@string/menu_share"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_screenshot"
        android:orderInCategory="9"
        android:title="@string/menu_screenshot"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_htpp"
        android:orderInCategory="10"
        android:title="@string/menu_htpp"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_about_site"
        android:orderInCategory="12"
        android:title="@string/menu_about_site"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_setting"
        android:orderInCategory="14"
        android:title="@string/menu_setting"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_pdf"
        android:orderInCategory="11"
        android:title="@string/menu_pdf"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_app_info"
        android:orderInCategory="13"
        android:title="@string/menu_app_info"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_exit"
        android:orderInCategory="15"
        android:title="@string/menu_exit"
        app:showAsAction="never"/>
</menu>